--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -127,11 +127,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Nexus<span>.</span></h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              21, Saheed Oyekunle street <br>
+              Atan-Ota, Ogun State<br>
+              Nigeria <br><br>
+              <strong>Phone:</strong> +2348153223206<br>
+              <strong>Email:</strong> nexusdigitalsagency@gmail.com<br>
             </p>
           </div>
 
@@ -147,15 +147,21 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">
+                Web Development
+              </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">
+                Digital marketing
+              </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">
+                Email marketing
+              </a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Submit your email to recieve updates of our sevices and promotional campaigns</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
