--- a/index.html
+++ b/index.html
@@ -860,13 +860,13 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
+            <!--<h4>Join Our Newsletter</h4>
             <p>Submit your email to recieve updates of our sevices and promotional campaigns</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
+            </form>-->
+	    <getresponse-form form-id="bcc186bf-421e-41b9-9f43-aa7661ef484d" e="1"></getresponse-form>
           </div>
-          <getresponse-form form-id="bcc186bf-421e-41b9-9f43-aa7661ef484d" e="1"></getresponse-form>
         </div>
       </div>
     </div>
