--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
       </div>
       <div class="social-links text-center text-md-end pt-3 pt-md-0">
         <a href="https://web.facebook.com/profile.php?id=61552566921420" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/netxusagency/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://iyaeko.myshopify.com/cdn/shop/collections/watch7.jpg?v=1697016542&width=535" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
