--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <h3>Saul Goodman</h3>
+                  <h3>Olamide Okanlawon</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     I had an outstanding experience with Nexus Digital Agency. Their team of experts in Shopify truly transformed my online store. From customizing themes to optimizing the checkout process, they did it all with precision and professionalism. I highly recommend their services for anyone looking to elevate their e-commerce game!
@@ -497,7 +497,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <h3>Sara Wilsson</h3>
+                  <h3>Babajide John</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Nexus Digital Agency is a game-changer when it comes to web development and digital marketing. Their expertise in Shopify and WordPress is unmatched. I've worked with them on multiple projects, and they consistently deliver top-notch results. Trustworthy, creative, and results-driven – Nexus is my partner of choice in the digital realm.
@@ -510,7 +510,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <h3>Jena Karlis</h3>
+                  <h3>Sarah Williams</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     I can't thank Nexus Digital Agency enough for their incredible digital marketing services. Their team took my online presence to the next level. Their strategies, from SEO to social media management, have significantly boosted my brand's visibility and engagement. If you want results, Nexus is the go-to agency.
