--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <!--<form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -812,7 +812,8 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            </form>-->
+	    <getresponse-form form-id="34fe4afb-c9b1-4d8b-8818-8715db0b0769" e="1"></getresponse-form>
           </div>
 
         </div>
