--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
 
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 mtt">
             <!--<form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col form-group">
