--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nexus|build your business</title>
+  <title>Netxus|build your business</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,7 +53,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><a href="index.html">Nexus<span>.</span></a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Netxus<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -137,7 +137,7 @@
               <h3>About Us
               </h3>
               <p>
-               Nexus Digital Agency is a prominent player in the world of Website development and digital marketing, serving clients internationally. Our core focus is facilitating business growth and global customer outreach through our proficient and dependable development and digital marketing services.
+               Netxus Digital Agency is a prominent player in the world of Website development and digital marketing, serving clients internationally. Our core focus is facilitating business growth and global customer outreach through our proficient and dependable development and digital marketing services.
               You can leave behind concerns about expenses and timelines, as we are here to provide unwavering support in every situation.
               </p>
               
@@ -487,7 +487,7 @@
                   <h3>Olamide Okanlawon</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I had an outstanding experience with Nexus Digital Agency. Their team of experts in Shopify truly transformed my online store. From customizing themes to optimizing the checkout process, they did it all with precision and professionalism. I highly recommend their services for anyone looking to elevate their e-commerce game!
+                    I had an outstanding experience with Netxus Digital Agency. Their team of experts in Shopify truly transformed my online store. From customizing themes to optimizing the checkout process, they did it all with precision and professionalism. I highly recommend their services for anyone looking to elevate their e-commerce game!
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -500,7 +500,7 @@
                   <h3>Babajide John</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Nexus Digital Agency is a game-changer when it comes to web development and digital marketing. Their expertise in Shopify and WordPress is unmatched. I've worked with them on multiple projects, and they consistently deliver top-notch results. Trustworthy, creative, and results-driven – Nexus is my partner of choice in the digital realm.
+                    Netxus Digital Agency is a game-changer when it comes to web development and digital marketing. Their expertise in Shopify and WordPress is unmatched. I've worked with them on multiple projects, and they consistently deliver top-notch results. Trustworthy, creative, and results-driven – Netxus is my partner of choice in the digital realm.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -513,7 +513,7 @@
                   <h3>Sarah Williams</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I can't thank Nexus Digital Agency enough for their incredible digital marketing services. Their team took my online presence to the next level. Their strategies, from SEO to social media management, have significantly boosted my brand's visibility and engagement. If you want results, Nexus is the go-to agency.
+                    I can't thank Netxus Digital Agency enough for their incredible digital marketing services. Their team took my online presence to the next level. Their strategies, from SEO to social media management, have significantly boosted my brand's visibility and engagement. If you want results, Netxus is the go-to agency.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -523,10 +523,10 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <h3>Matt Brandon</h3>
+                  <h3>Paul Olayode</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Nexus Digital Agency provided me with a professional service in WordPress that exceeded my expectations. They not only created a visually stunning website but also ensured it was user-friendly and SEO-optimized. The attention to detail and commitment to my project made me a loyal client. Thank you, Nexus, for your exceptional work!
+                    Netxus Digital Agency provided me with a professional service in WordPress that exceeded my expectations. They not only created a visually stunning website but also ensured it was user-friendly and SEO-optimized. The attention to detail and commitment to my project made me a loyal client. Thank you, Netxus, for your exceptional work!
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -772,8 +772,8 @@
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
                   <p>
-                    <a href="mailto:nexusdigitalsagency@gmail.com?subject=Website%20Inquiry&body=Hello%20Nexus," style = 'color: #444444;'>
-                      nexusdigitalsagency@gmail.com
+                    <a href="mailto:Netxusdigitalsagency@gmail.com?subject=Website%20Inquiry&body=Hello%20Netxus," style = 'color: #444444;'>
+                      Netxusdigitalsagency@gmail.com
                     </a>
 
                   </p>
@@ -831,15 +831,15 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Nexus<span>.</span></h3>
+            <h3>Netxus<span>.</span></h3>
             <p>
               21, Saheed Oyekunle street <br>
               Atan-Ota, Ogun State<br>
               Nigeria <br><br>
               <strong>Phone:</strong>+2348153223206<br>
               <strong>Email:</strong>
-              <a href="mailto:nexusdigitalsagency@gmail.com?subject=Website%20Inquiry&body=Hello%20Nexus,">
-                      nexusdigitalsagency@gmail.com
+              <a href="mailto:Netxusdigitalsagency@gmail.com?subject=Website%20Inquiry&body=Hello%20Netxus,">
+                      Netxusdigitalsagency@gmail.com
                </a>
                <br>
             </p>
@@ -879,7 +879,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Nexus</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Netxus</span></strong>. All Rights Reserved
         </div>
       </div>
       <div class="social-links text-center text-md-end pt-3 pt-md-0">
