--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -103,9 +103,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Portfolio detail</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                We designed and developed a visually stunning website for Netxus, using a modern tech stack. The color scheme of light blue and black was carefully chosen to create a sleek and professional look. The website is built with Bootstrap for responsiveness, HTML and CSS for structure and style, JavaScript for interactivity, and PHP for dynamic functionality. This project showcases our expertise in web design and development, delivering a user-friendly and aesthetically pleasing online presence for Netxus.
               </p>
             </div>
           </div>
