--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -96,10 +96,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Website Development</li>
+                <li><strong>Client</strong>: Nextsus</li>
+                <li><strong>Project date</strong>: 10th October 2023</li>
               </ul>
             </div>
             <div class="portfolio-description">
