--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><a href="index.html">Netxus<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
+      <a href="index.html" class="logo me-auto"><img src="assets/img/netxuslogo.png" alt="netxus"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
