--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
                 <h4>NXSHOES</h4>
                 <p>ecommerce</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/nxshoes2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/nxshoes2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Website"><i class="bx bx-plus"></i></a>
+                  <a href="nxshoes.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -442,8 +442,8 @@
                 <h4>NXCLOTHES</h4>
                 <p>ecommerce</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/nxclothes2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/nxclothes2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Website"><i class="bx bx-plus"></i></a>
+                  <a href="nxclothes.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -456,8 +456,8 @@
                 <h4>IYAEKO JEWELS</h4>
                 <p>ecommerce</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/iyaeko1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/iyaeko1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Website"><i class="bx bx-plus"></i></a>
+                  <a href="iyaekoprw.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
