--- a/nxshoes.html
+++ b/nxshoes.html
@@ -168,8 +168,8 @@
                Nigeria <br><br> 
                <strong>Phone:</strong>+2348153223206<br> 
                <strong>Email:</strong> 
-               <a href="mailto:Netxusdigitalsagency@gmail.com?subject=Website%20Inquiry&body=Hello%20Netxus,"> 
-                       Netxusdigitalsagency@gmail.com 
+               <a href="mailto:netxusdigitalsagency@gmail.com?subject=Website%20Inquiry&body=Hello%20Netxus,"> 
+                       netxusdigitalsagency@gmail.com 
                 </a> 
                 <br> 
              </p> 
