--- a/nxshoes.html
+++ b/nxshoes.html
@@ -97,7 +97,7 @@
           <li><a href="index.html">Home</a></li>
           <li>Portfolio</li>
         </ol>
-        <h2>nxshoes</h2>
+        <h2>Nxshoes</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
